<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yummy</string>
    <string name="menu_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="required">*</string>

    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="activity_main_button_searchNearby">Search</string>
    <string name="activity_main_button_search">Find Food Trucks</string>
    <string name="search_by_location">City, Zip Code, Street, etc</string>
    <string name="search_by_type">Chinese, American, etc</string>
    <string name="location">Where are you?</string>
    <string name="food_type">What would you like?</string>

    <!-- Login Activity -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="activity_login_hint_username">Username</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_textView_signIn">Enter Your Account Information:</string>

    <!-- Search Activity -->
    <string name="title_activity_search">SearchActivity</string>

    <!-- Search Result Activity -->
    <string name="title_activity_search_results">SearchResultsActivity</string>

    <!-- Vendor Activity -->
    <string name="title_activity_vendor">VendorActivity</string>
    <string name="vendorPicture">Vendor Picture</string>
    <string name="view_menu">Browse Menu</string>
    <string name="view_review">Read Reviews</string>
    <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="saturday">Saturday:</string>
    <string name="sunday">Sunday:</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="status">Status:</string>

    <!-- Menu Activity -->
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Vendor Admin Account Activity -->
    <string name="title_activity_vender_admin_account">VendorAdminAccountActivity</string>
    <string name="edit_general_info">Edit General Info</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="view_order_history">View Order History</string>

    <!-- Register Activity -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_label">Please enter your information:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="reenter_password_label">Re-enter Password:</string>
    <string name="firstname_label">First Name:</string>
    <string name="lastname_label">Last Name:</string>
    <string name="phone_label">Phone Number:</string>
    <string name="phone_hint">123-456-7890</string>
    <string name="email_label">Email:</string>

    <!-- Vendor Edit Activity -->
    <string name="title_activity_vendor_edit">VendorEditActivity</string>
    <string name="edit_general_information">Edit General Information</string>
    <string name="edit_name_label">Name:</string>
    <string name="edit_description_label">Description:</string>
    <string name="edit_location_label">Location:</string>
    <string name="edit_status_label">Status:</string>
    <string name="textOn">Open</string>
    <string name="testOff">Close</string>
    <string name="edit_hours_label">Hours:</string>
    <string name="semi">:</string>
    <string name="to"> to </string>
    <string name="format">Please enter in 24 hour format</string>
    <string name="closeHint">Enter 00 on all for closed</string>
    <string name="save">Save</string>
    
    <!-- Read Rating Activity -->
    <string name="title_activity_read_review">ReadReviewActivity</string>
    <string name="rating">Rating</string>
    <string name="average_rating">Average Rating: </string>

	 <string name="hello_world">Hello world!</string>
    <string name="title_activity_cart">MainActivity</string>
    <string name="title_activity_order_confirmation">OrderConfirmationActivity</string></resources>