<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_register"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:text="@string/activity_main_button_login" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:onClick="register"
        android:text="@string/activity_main_button_register" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_by_location"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/search_by_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/search_by_location" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id0/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:onClick="searchNearby"
        android:text="@string/activity_main_button_search" />

    <TextView
        android:id="@+id/food_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_by_location"
        android:layout_below="@+id/search_by_location"
        android:text="@string/food_type"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/search_by_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/food_type"
        android:layout_below="@+id/food_type"
        android:ems="10" 
        android:hint="@string/search_by_type" />

</RelativeLayout>
