<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:orientation="vertical" >
	    <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:orientation="horizontal" >
		    <ImageView
		        android:id="@+id/adminVendorPicture"
		        android:contentDescription="@string/vendorPicture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/no_image"
		        android:layout_marginTop="36dp" />
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:orientation="vertical" >
			    <TextView
			        android:id="@+id/adminVendorName"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
				    android:layout_marginTop="20dp"
			        android:layout_marginLeft="5dp"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
			    <TextView
				    android:id="@+id/adminVendorAddress"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="10dp"
			        android:layout_marginLeft="5dp"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
			    <TextView
				    android:id="@+id/adminVendorStatus"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="10dp"
			        android:layout_marginLeft="5dp"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
			android:layout_marginTop="50dp"
		    android:layout_gravity="center" >
			<Button
		        android:id="@+id/button_edit_general_info"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:onClick="editGeneralInfo"
		        android:text="@string/edit_general_info" />
			<Button
		        android:id="@+id/button_edit_menu"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
		        android:text="@string/edit_menu" />
		</LinearLayout>
		<Button
	        android:id="@+id/button_view_order_history"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
	        android:text="@string/view_order_history" />
	</LinearLayout>
</ScrollView>